[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/main_menu.gd" type="Script" id=2]
[ext_resource path="res://assets/logo.png" type="Texture" id=3]
[ext_resource path="res://assets/new_theme.tres" type="Theme" id=4]

[node name="main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logo" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.2
margin_left = -240.0
margin_right = 240.0
margin_bottom = 144.0
texture = ExtResource( 3 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.6
margin_left = -100.0
margin_top = -100.0
margin_right = 100.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_new" type="Button" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 64.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
custom_colors/font_color_disabled = Color( 0.462745, 0.462745, 0.462745, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "new"

[node name="btn_continue" type="Button" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 200.0
margin_bottom = 132.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
text = "continue"

[node name="btn_exit" type="Button" parent="VBoxContainer"]
margin_top = 136.0
margin_right = 200.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
text = "exit"
[connection signal="pressed" from="VBoxContainer/btn_new" to="." method="_on_btn_new_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_continue" to="." method="_on_btn_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_exit" to="." method="_on_btn_exit_pressed"]
